# oz_01_main-001-BE

./: README.md  db.sqlite3  pyproject.toml
.config_secret/: secret_common.json
cellcook/: manage.py  pyproject.toml
cellcook/.config_secret/: secret_common.json
cellcook/cellcook/: asgi.py  settings.py  urls.py  wsgi.py
cellcook/config/: settings.py  urls.py
cellcook/fridge/: urls.py  views.py
cellcook/templates/: base.html  login.html  menu.html  signup.html
cellcook/users/: models.py  urls.py  views.py
cellcook/users/migrations/: 0001_initial.py  0002_rename_id_user_username.py
config/: settings.py  urls.py  views.py
fridge/: models.py  urls.py  views.py
fridge/migrations/: 0001_initial.py  0002_alter_ingredient_ingredient_id.py
static/css/: add_ingredient.css
templates/: base.html
templates/fridge/: fridge_main.html
templates/users/: login.html  signup.html
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_id_user_vegetarian_alter_user_password_and_more.py
